[metadata]
name = nozomi
version = 0.0.dev0
author = lionelpx
author_email = lionel.panhaleux@gmail.com
url = http://github.com/lionel-panhaleux/nozomi
description="Discord interactions layer for hikari",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = discord bot slash interaction command hikari
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Plugins
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    hikari
    stringcase

[options.extras_require]
dev =
    black
    flake8
    ipdb
    ipython
    pytest
    pytest-asyncio
    zest.releaser[recommended]

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[zest.releaser]
create-wheel = yes
